--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@appsan-web/mini-web-sdk": "^0.0.15",
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-query": "^5.80.2",
     "axios": "^1.7.7",
     "framer-motion": "^12.12.1",
     "notistack": "^3.0.2",
